--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.4.1
+async-timeout==4.0.2
+Deprecated==1.2.13
 Django==3.2.13
 django-debug-toolbar==3.5.0
+gunicorn==20.1.0
+packaging==21.3
 psycopg2-binary==2.9.3
+pyparsing==3.0.9
 pytz==2022.1
+redis==4.3.4
 sqlparse==0.4.2
 typing_extensions==4.1.1
+wrapt==1.14.1
